# TclTheora

./: CMakeLists.txt  README  config.h.cmake
scripts/: CMakeLists.txt  pkgIndex.tcl  testtheora.tcl
src/: CMakeLists.txt  tcltheora_Init.c
testing/: CMakeLists.txt  theora_test.c
